[tool.poetry]
name = "peerplay-backend"
version = "0.1.0"
description = "Backend tool to scrape torrent website"
authors = ["Mohammed Saud Alsahli <102217045+MohammedSaudAlsahli@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
