[tool.poetry]
name = "peerplay-backend"
version = "0.1.0"
description = "Backend tool to scrape torrent website"
authors = ["Mohammed Saud Alsahli <102217045+MohammedSaudAlsahli@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
bs4 = "^0.0.2"
pydantic = "^2.9.2"
requests = "^2.32.3"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
be-skait = "src.constants.classes.html_parser:main"